# GSE-Embedded-Software

./: README.md  RadioHead69_RawDemo_RX.ino  desktop.ini
Encoder_example/: Encoder_example.ino
LCD_example/: LCD_example.ino
Pad Enclosure/: CMakeLists.txt  main.cpp  rfm69.cpp  rfm69.h
Pad-Enclosure/: CMakeLists.txt  pad.cpp  rfm69.cpp  rfm69.h
RadioHead69_RawDemo_RX/: RadioHead69_RawDemo_RX.ino
RadioHead69_RawDemo_TX_MEGA/: RadioHead69_RawDemo_TX_MEGA.ino
Shared_File/: Shared_File.ino
User-Enclosure/: CMakeLists.txt  blink.cpp  rfm69.cpp  rfm69.h
User-Enclosure/.cache/clangd/index/: User-Enclosure.c.0CDABEEE4A63E1D6.idx
